# lab3-cicd

./: .dockerignore  .gitignore  .hadolint.yaml  .yamllint.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  Міні-звіт_ЛР3_CICD.docx
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  db.py  main.py  migrate.py
deploy/: deploy.sh  target-node-setup.sh
runner/: setup-runner.sh
tests/: conftest.py  test_config.py  test_health.py  test_items.py  test_root.py
verify/: verify.sh
